fix: some user images were distorted, setted width and heigth to their avatars

--- a/Front-End/src/components/SinglePost/SinglePost.css
+++ b/Front-End/src/components/SinglePost/SinglePost.css
@@ -48,7 +48,8 @@
 }
 
 #like-button-img{
-  width: 20px;
+  width: 25px;
+  height: 25px;
   filter: invert(100%)
 }
 
